<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_download"
        android:title="@string/action_download"
        android:icon="@drawable/ic_download"
        android:name="ActionButtonStyle"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_upload"
        android:title="@string/action_load"
        android:icon="@drawable/ic_upload"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_brush"
        android:title="@string/action_brush"
        android:icon="@drawable/ic_brush"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_text"
        android:title="@string/action_text"
        android:icon="@drawable/ic_text"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:icon="@drawable/ic_clear"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="always|withText" />

        <item
            android:id="@+id/action_check"
            app:actionViewClass="android.widget.CheckBox"
            android:checkable="true"
            app:showAsAction="always"
            android:title="@string/action_check"/>
</menu>